--- a/public/index.html
+++ b/public/index.html
@@ -7,9 +7,9 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Daniel Janis Webpage"
     />
-    <meta name="image" property="og:image" content="../src/images/homepage.png">
+    <meta name="image" property="og:image" content="https://daniel-janis.herokuapp.com/">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
